<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tv1"
                android:textSize="@dimen/ts_16px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rdms_tv1"
                android:textSize="@dimen/ts_16px" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tv2"
                android:textSize="@dimen/ts_16px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rdms_tv2"
                android:textSize="@dimen/ts_16px" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginTop="@dimen/dp10"
            android:layout_marginBottom="@dimen/dp20">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_tv3"
                android:textSize="@dimen/ts_16px" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_rdms_tv3"
                android:textSize="@dimen/ts_16px" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/line_gray"

            />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp15"
        android:layout_marginRight="@dimen/dp15"
        android:layout_marginTop="@dimen/dp15"
        android:background="@drawable/bt_blue"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dp3"
            android:layout_marginBottom="@dimen/dp3"
            android:layout_centerInParent="true"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/bar_serach"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/tv_rdms_tv4"
                android:textSize="@dimen/ts_18px"
                android:layout_marginLeft="@dimen/dp4"
                />


        </LinearLayout>

    </RelativeLayout>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp15"
        android:background="@drawable/white_corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginBottom="@dimen/dp2"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tv_zlms_tv3"
                android:textSize="@dimen/ts_16px" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/white"
                android:text="V5.0"
                android:textColor="@color/text_color_gray2"
                android:id="@+id/ssid" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/line_gray" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp45"
            android:layout_marginBottom="@dimen/dp2"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:layout_marginTop="@dimen/dp2"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/tv_zlms_tv4"
                android:textSize="@dimen/ts_16px" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp10"
                android:background="@color/white"
                android:text="123455"
                android:textColor="@color/text_color_gray2"
                android:id="@+id/password" />

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/bt_sure_green"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/tv_sure"
            android:textSize="@dimen/ts_18px"
            android:textColor="@color/white"
            android:id="@+id/ok" />

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/bt_cancel_gray"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/tv_cancel"
            android:textSize="@dimen/ts_18px"
            android:textColor="@color/white"
            android:id="@+id/cancel" />

    </LinearLayout>


</LinearLayout>
