<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color_gray1"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp15">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_tv1"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/ts_16px" />
            <TextView
                android:id="@+id/version_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="V5.0"
                android:textSize="@dimen/ts_16px" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/line_gray"
            android:layout_marginTop="@dimen/dp10"

            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:layout_marginTop="@dimen/dp10">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_tv2"
                android:layout_alignParentLeft="true"
                android:textSize="@dimen/ts_16px" />
            <TextView
                android:id="@+id/deviceid_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="AT585489"
                android:textSize="@dimen/ts_16px" />
        </RelativeLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:background="@color/line_gray"
            android:layout_marginTop="@dimen/dp15"

            />
    </LinearLayout>








    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        >

        <Button
            android:id="@+id/read_data_bt"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/bt_sure_green"
            android:layout_marginRight="@dimen/dp10"
            android:text="@string/tv_guanliyuan_tv1"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_18px"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/dp40"
            android:layout_weight="1"
            android:background="@drawable/bt_cancel_gray"
            android:layout_marginLeft="@dimen/dp10"
            android:text="@string/tv_guanliyuan_tv2"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_18px"
            />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp20"
        android:layout_marginRight="@dimen/dp20"
        android:layout_marginTop="@dimen/dp20"
        android:background="@drawable/bt_blue"
        android:text="@string/tv_guanliyuan_tv3"
        android:textColor="@color/white"
        android:textSize="@dimen/ts_18px"
        />



</LinearLayout>
