<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp45"
        android:layout_alignParentTop="true"
        android:background="@color/titlebar_color_blue1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bar_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/dp4"
                android:text="title"
                android:textColor="@color/white"
                android:textSize="@dimen/ts_20px" />


        </LinearLayout>

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="@dimen/dp50"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true">

            <ImageView
                android:id="@+id/bar_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@mipmap/bar_serach" />
        </RelativeLayout>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/titlebar_color_blue2"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/tab1_layout"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/titlebar_color_blue1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp2"
            android:paddingTop="@dimen/dp2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp4"
                android:background="@mipmap/icon01" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_title1"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab2_layout"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/titlebar_color_blue2"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp2"
            android:paddingTop="@dimen/dp2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp4"
                android:background="@mipmap/icon02" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_title2"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab3_layout"
            android:layout_width="@dimen/dp0"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/titlebar_color_blue2"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dp2"
            android:paddingTop="@dimen/dp2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="@dimen/dp4"
                android:background="@mipmap/icon03" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tab_title3"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


    <FrameLayout
        android:id="@+id/fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/top_layout"></FrameLayout>

</RelativeLayout>
